# cpp-tasks

./: README.md  main.cc
task10/: README.md  meson.build
task10/src/: rotate_test.cc
task10/src/project/: main.cc  meson.build  rotate.hh
task10/src/test/: meson.build
task11/: README.md
task11/src/project/: main.cc  my_thread.hh
task11/src/test/: meson.build  my_thread_test.cc
task2/: README.md  meson.build
task2/src/: meson.build
task2/src/project/: main.cc  meson.build  my_vector.hh
task3/: README.md  meson.build
task3/src/: meson.build
task3/src/project/: main.cc  message.hh
task3/src/tests/: meson.build  message_test.cc
task4/: README.md
task4/src/project/: main.cc  ostream_guard.hh
task4/src/tests/: array_test.cc  meson.build
task5/: README.md
task5/src/project/: main.cc
task5/src/tests/: meson.build
task6/: README.md  meson.build
task6/src/project/: group.hh  main.cc  man.hh  trait.hh
task6/src/test/: meson.build  trait_test.cc
task7/: README.md
task7/src/project/: line_number_buffer.hh  main.cc
task8/: README.md
task8/src/project/: main.cc  meson.build  parallel_sort.hh
task8/src/test/: meson.build  sort_test.cc
task9/: README.md
task9.1/: README.md  meson.build
task9.1/src/project/: main_task8.cc
task9.1/src/project/task10/: main.cc  rotate.hh
task9.1/src/project/task4/: my_array.hh
task9.1/src/project/task5/: my_stream.hh  sort.hh
task9.1/src/project/task8/: parallel_sort.hh
task9.1/src/test/: meson.build  my_stream_test.cc  sort_test.cc  trait_test.cc
task9/src/: meson.build
task9/src/project/: main_task3.cc  meson.build
task9/src/project/task11/: main.cc  my_thread.cc  my_thread.hh
task9/src/project/task3/: message.hh
task9/src/project/task6/: group.hh  main.cc  trait.hh
task9/src/project/task7/: main.cc
task9/src/test/: array_mask_test.cc  guard_test.cc  meson.build  my_thread_test.cc
