gtest = dependency('gtest', main:true)
test('guard',executable('guard_test',
                sources: ['guard_test.cc'],
                include_directories: src,
                dependencies: [gtest]
    )
)
test('array',executable('array_test',
                sources: ['array_test.cc'],
                include_directories: src,
                dependencies: [gtest]
    )
)
test('array_mask',executable('array_mask_test',
                sources: ['array_mask_test.cc'],
                include_directories: src,
                dependencies: [gtest]
    )
)
