gtest = dependency('gtest', main:true)
test('nth_stream',executable('my_stream_test',
                sources: ['my_stream_test.cc'],
                include_directories: src,
                dependencies: [gtest]
    )
    
)
test('sorting',executable('sort_test',
                sources: ['sort_test.cc'],
                include_directories: src,
                dependencies: [gtest]
    )
    
)


